force-app/main/default/objects/Visit_Procedure__c/Visit_Procedure__c.object-meta.xml
<CustomObject>
    <pluralLabel>Visit Procedures</pluralLabel>
    <fullName>Visit_Procedure__c</fullName>
    <description>Line item linking a procedure (Product2) to a Scheduled Visit</description>
    <nameField>
        <label>Visit Procedure Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <label>Visit Procedure</label>
</CustomObject>