force-app/main/default/objects/Visit_Procedure__c/fields/Procedure__c.field-meta.xml
<CustomField>
    <fullName>Procedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The procedure (Product2) performed during this visit</description>
    <label>Procedure</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Visit Procedures</relationshipLabel>
    <relationshipName>Visit_Procedures</relationshipName>
    <type>Lookup</type>
</CustomField>