force-app/main/default/objects/Visit_Procedure__c/fields/Scheduled_Visit__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Visit__c</fullName>
    <type>MasterDetail</type>
    <label>Scheduled Visit</label>
    <description>The scheduled visit this procedure line item belongs to</description>
    <referenceTo>Scheduled_Visit__c</referenceTo>
    <relationshipLabel>Visit Procedures</relationshipLabel>
    <relationshipName>Visit_Procedures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>